@@ -12,6 +12,10 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 * Fix crash when fenced code block is empty and does not specify a language (#93)
 * Handle front matter value that is parsed as a date or datetime (#95)
 
+=== Changed
+
+* Add JRuby 9.3 to CI matrix
+
 == 2.0.0 (2021-07-11) - @mojavelinux
 
 === Added
